fix height et alignement offers

--- a/Resources/public/less/program.less
+++ b/Resources/public/less/program.less
@@ -257,7 +257,7 @@
         width: 100%;
 
         tr {
-          height: 80px;
+          height: 100px !important;
           border-bottom: 1px solid #efefef;
           &.other-episodes, &.other-episodes:hover {
             background: #EEE;
@@ -306,10 +306,7 @@
               }
             }
             &.price {
-              min-width: 120px;
-              &.price-vod {
-                min-width: 180px;
-              }
+              width: 180px;
               .rent {
                 text-transform: uppercase;
                 font-size: 1.2em;
